turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:26: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:39: error: Unmatched closing brace '}' ignored here
}
^