turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {	
		while(getCouleurSol!=colors(i)){
			if(getCouleurSol()==colors(i)){
				setCouleurBrosse(colors(i+1));
			}
		}
		
		if(rule(j)=="R"){
			droite();
			baisseBrosse();
			leveBrosse();
			avance();
		}else{
			gauche();
			baisseBrosse();
			leveBrosse();
			avance();
		}
	}
}

